4 April 2019: Wouter
	- Fix spelling error in log output for event method.

3 April 2019: Wouter
	- Move goto label in answer_from_cache to the end of the function
	  where it is more visible.
	- Fix auth-zone NSEC3 response for wildcard nodata answers,
	  include the closest encloser in the answer.

2 April 2019: Wouter
	- Fix auth-zone NSEC3 response for empty nonterminals with exact
	  match nsec3 records.
	- Fix for out of bounds integers, thanks to OSTIF audit.  It is in
	  allocation debug code.
	- Fix for auth zone nsec3 ent fix for wildcard nodata.

25 March 2019: Wouter
	- Fix that tls-session-ticket-keys: "" on its own in unbound.conf
	  disables the tls session ticker key calls into the OpenSSL API.
	- Fix crash if tls-servic-pem not filled in when necessary.

21 March 2019: Wouter
	- Fix #4240: Fix whitespace cleanup in example.conf.

19 March 2019: Wouter
	- add type CAA to libpyunbound (accessing libunbound from python).

18 March 2019: Wouter
	- Add log message, at verbosity 4, that says the query is encrypted
	  with TLS, if that is enabled for the query.
	- Fix #4239: set NOTIMPL when deny-any is enabled, for RFC8482.

7 March 2019: Wouter
	- Fix for #4233: guard use of NDEBUG, so that it can be passed in
	  CFLAGS into configure.

5 March 2019: Wouter
	- Tag release 1.9.1rc1.  Which became 1.9.1 on 12 March 2019.  Trunk
	  has 1.9.2 in development.

1 March 2019: Wouter
	- output forwarder log in ssl_req_order test.

28 February 2019: Wouter
	- Remove memory leak on pythonmod python2 script file init.
	- Remove swig gcc8 python function cast warnings, they are ignored.
	- Print correct module that failed when module-config is wrong.

27 February 2019: Wouter
	- Fix #4229: Unbound man pages lack information, about access-control
	  order and local zone tags, and elements in views.
	- Fix #14: contrib/unbound.init: Fix wrong comparison judgment
	  before copying.
	- Fix for python module on Windows, fix fopen.

25 February 2019: Wouter